stuff works, but needs to be more thoroughly tested
