# swagger-apis/current-swagger.yaml
@@ -42,6 +42,27 @@ paths:
             type: string
         400:
           description: "400 response: Invalid input or maxMembers reached"
+  /choice/{idChoice}:
+    get:
+      tags:
+      - members
+      operationId: getChoice
+      description: gets a choice specified by id
+      produces:
+      - application/json
+      parameters:
+      - name: idChoice
+        in: path
+        required: true
+        type: string
+        format: uuid
+      responses:
+        200:
+          description: "200 response: Choice accessed"
+          schema:
+            $ref: '#/definitions/Choice'
+        400:
+          description: "400 response: Invalid input"
   
 definitions:
   ChoiceRequest:
